k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: echochamber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      enableServiceLinks: false
      containers:
        - name: producer
          image: echochamber/producer:local
          imagePullPolicy: IfNotPresent
