k8s/storage-sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-sink
  namespace: echochamber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-sink
  template:
    metadata:
      labels:
        app: storage-sink
    spec:
      enableServiceLinks: false
      containers:
        - name: storage-sink
          image: echochamber/storage-sink:local
          imagePullPolicy: IfNotPresent
