k8s/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: echochamber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      enableServiceLinks: false
      containers:
        - name: mlflow
          image: echochamber/mlflow:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: echochamber
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
